1.硬件树增加重命名功能

--- a/Source/LJH.Attendance.UI/Controls/DeviceTree.resx
+++ b/Source/LJH.Attendance.UI/Controls/DeviceTree.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACg
-        CwAAAk1TRnQBSQFMAgEBAwEAATwBAAE8AQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAG
+        CwAAAk1TRnQBSQFMAgEBAwEAAUQBAAFEAQABFAEAARQBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABUAMAARQDAAEBAQABCAUAAUABBhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -153,28 +153,26 @@
         AZkBzAEAAf8BmQH/AQAB/wHMAgAB/wHMATMBAAH/AcwBZgEAAf8BzAGZAQAB/wLMAQAB/wHMAf8BAAL/
         ATMBAAHMAf8BZgEAAv8BmQEAAv8BzAEAAmYB/wEAAWYB/wFmAQABZgL/AQAB/wJmAQAB/wFmAf8BAAL/
         AWYBAAEhAQABpQEAA18BAAN3AQADhgEAA5YBAAPLAQADsgEAA9cBAAPdAQAD4wEAA+oBAAPxAQAD+AEA
-        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/BQAF/wMABv8CAAHy
-        A/QBGwGZAfQ2AAL/AQcBCAUHAXgBtQa7AbUB/wH0AXMEGgF0AXMBBzMAAf8BBwiYAZEBkAW1ArQBuwEA
-        AfMBcwEaApoBGgGaAZkB8AoAAfMEbQHzAgAEbQHsAgAFbRUAApkBmAVyA5ECtAPPAbQCtQIAAfMBdAKa
-        AcMCGgF0AfAJAAG8BG0B8AIABW0CAAVtFQABmQQIAQcBCAEHAZECkge7AbUCAAEcApoBdAGaARoCmQF0
-        AfAIAAG8BG0B8AIABW0CAAVtFQABVgEIAfMB8QMIAgcB9wLyAbwBCQS7AbQCAAEcAhoBdAGaApkC7QF0
-        AfAHAAH0BOwB9AIABOwB9wIAAe0E7BYAAQgB8gHzARsB8QMIAZABCQHzAfIB8QIJArsDAAEcARoDmQF0
-        AXMBBwHwAe0BHDIAAQgC8QHwAbwBCAF4AQABtAPwAgkBuwUAARwBdAGZAXMBkwGSAfAB8QHwAe0BBwgA
-        AQcB7wYAAewGAAHsAf8ZAAFWApgBeAH/AwAB/wG0AbUCtAcAAbwBmgFuAewB8QHwA/EC7wH/BgAB7wGS
-        BvQBbQb0AewB/xgAAQgFeAMABbQIAAFuAewBBwPyA/EB8AHsAf8FAAEHD20B/xgAAXgBmAGZAZgCeAIA
-        AfQBtAG7AbUBtAGRAa4IAAH3AfIC8QHyAfEC8gHxAfIB7wH3DAAB7CAAAZgBCAG8AQgBmAF4AgABCQG7
-        AgkBtQG0Aa4HAAHsAvIC8wHyAfMD8gHzAfAB7AHwBwAB/waTARodAAGYAhsBCAGZAXgDAAEZAfMBCQG7
-        AbQB8gUAAf8B7QHzAvQB8QHzAvIB8QHwAfEB9AHvAZoBmQF0BgAIIAEaHQABvAHwAbwBmAEAAe8CBwHz
-        ARkB8AG7Aa0GAAGSAfEB/wHyAfMB8gH0AvMBHAGZArwBGgKaARoGAAIgBBYCIAEaIQAB7wG8AfACBwoA
-        AfcBBwP/AfMB9AHyAf8BHAGaAXMDmgIaBgAIIAEaIQABvALzAbwBBwsAAQcB7wHyAf8B8wL/AfMBdAKZ
-        ApoBdAEcAZMGAAIgBBYCIAEaIQAB7wH/AfICBwwAAfQB7QHyAf8B8gG7Ae8BHAIaAZMBcwHzAQAB/wYA
-        CCABGiIAAfcC7w8AAZIBvAH0AfcB8wHsARwBvAsAAf8GGgEbNgAB8QHsAfcB8gHzfwABQgFNAT4HAAE+
-        AwABKAMAAVADAAEUAwABAQEAAQEFAAHwFwAD/wEAAfABcAEwAR8D/wHwBAABgAIAAQcD/wHwBgABCAED
-        Af8BAwEGBQABgAEAAQwBAQH/AQMBBgUAAYABAAEMAQAB/wEDAQYFAAGAAQABDAEAAX8BAwEGBQABwAEA
-        ARwBAAF/Av8B8AQAAeABIAE+AQABPwHPAd8BkAQAAfABcAF/AQABDwHAAQABEAQAAeABcAF/AYABBwHA
-        AQABEAQAAeABYAE/AcABAwH/Ad8B8AQAAeABYAE/AYABAQH8AQMB8AQAAeABcAE+AgAB/AEBAfAEAAHw
-        AYABfgIAAfwBAQHwBAAB/wEHAf4CAAH8AQEB8AQAAf8BBwH/AgAB/AEBAfAEAAH/AQcB/wGAAQIB/AEB
-        AfAEAAH/AY8B/wHgAR8B/AEDAfAEAAP/AfABfwL/AfAEAAf/AfAEAAs=
+        AfAB+wH/AQABpAKgAQADgAMAAf8CAAH/AwAC/wEAAf8DAAH/AQAB/wEAAv8CAAP/hAAC/wH0Av8YAAHz
+        BG0B8wIABG0B7AIABW0cAAP/AbwBEwEOAfgB9AH/FwABvARtAfACAAVtAgAFbQEAAf8B9APzA/IC8QTy
+        AvMC9AH/BQAD/wHwARQBAAERARQBbQEVAUMB8gL/FQABvARtAfACAAVtAgAFbQEAAf8DUgoxA1IBMQH/
+        AwAC/wHyARUBAAERARMBbQG8AfAB9wHqAhUBkgH0Af8UAAH0BOwB9AIABOwB9wIAAe0E7AEAAf8BWQFY
+        DFIBWAJZBAABvAEAAREBEwH4AbwB8AEHAbwBlwHwARIBbQEVARQB9AH/KQAB/wRZAlgBUgJZAVIHWQMA
+        AfQBEgHtAfABvAEHAZIB7AHwAe4B8AEHAewBEgIUAfQXAAEHAe8GAAHsBgAB7AH/AgAB9g9ZAXoBWQMA
+        AfQB8AHvARIBEwLrAW0BBwHtAQcB7wG8ARQBEgETAfQXAAHvAZIG9AFtBvQB7AH/AgAB9AV6CFkEegQA
+        AesB+AHsAe0BkgH4AewB9wEUAkkB7wEVAhIB9BcAAQcPbQH/AgABGxF6BAAB7wHsAZIB/wHxAe0B9wIT
+        AU8BIQH4Ae0BEwESAfQfAAHsCgABGg96AZoBegQAAfAB+AHxAfQC7wHtARQB+AERAUgBEAHvAUMBEgH0
+        GwAB/waTARoHAAOaB3oImgH/AwAB/wFtAfMBBwH3AfAB6wJtAUMBDwEQAewBEAETAfQbAAggARoGAAF6
+        EZoB/wQAAZIBvAPrAu0BQwHqARIB6gHtARQBEwH0GwACIAQWAiABGgYAAXoHmgJ6CJoB9gQAAbwB7AHr
+        Ae0B9wH4AZIBFQH4Ae0BkgH4AesBFQH0GwAIIAEaBgABWQaaCDEBUgFYAVIGAAHuAQABTwFUAU4BDQFt
+        ARUB7AHtAfcB7QHsHAACIAQWAiABGgYAARoBegZZCnoGAAHvARIBcgFtAfgCkgERAesB9wHwAfQdAAgg
+        ARoHABH0BwABBwLvAewB6wHsAfcB/yAAAf8GGgEbIAAB9AHzAv++AAFCAU0BPgcAAT4DAAEoAwABUAMA
+        ARQDAAEBAQABAQUAAfAXAAP/AQAH/wHwBAAG/wHgAfAEAAEDAQYBDwP/AQABcAQAAQMBBgEIAgAB+AEA
+        ARAEAAEDAQYBCAIAAeAGAAEDAQYBCAEAAQEB4AYAAv8B+AEAAQEBwAEAARAEAAHPAd8BmAEAAQEBwAEA
+        ARAEAAHAAQABGAEAAQEB4AEAARAEAAHAAQABGAEAAQEB4AEAARAEAAH/Ad8B+AEAAQEB4AEAARAEAAH8
+        AQMB+AIAAeABAAEQBAAB/AEBAfgCAAHwAQABEAQAAfwBAQH4AgAB8AEAARAEAAH8AQEB+AEAAQEB+AEA
+        ATAEAAH8AQEB+AEAAQEB+AEAAXAEAAH8AQEB/AEAAQEB/AEDAfAEAAH8AQMD/wH8AT8B8AQAB/8B8AQA
+        B/8B8AQACw==
 </value>
   </data>
   <metadata name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
