--- a/Source/LJH.Attendance.UI/Properties/Resources.resx
+++ b/Source/LJH.Attendance.UI/Properties/Resources.resx
@@ -1075,4 +1075,7 @@
   <data name="UcCard_TicketNotSupport" xml:space="preserve">
     <value>纸票不支持发行操作</value>
   </data>
+  <data name="drag" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\drag.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
