1.增加从指纹机获取考勤记录的功能,但还没有完全测试

--- a/Source/LJH.Attendance.UI/FrmMain.resx
+++ b/Source/LJH.Attendance.UI/FrmMain.resx
@@ -562,7 +562,7 @@
     <value>60, 61</value>
   </data>
   <data name="btnAttendanceLog.Text" xml:space="preserve">
-    <value>原始考勤</value>
+    <value>打卡记录</value>
   </data>
   <data name="btnAttendanceLog.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageAboveText</value>
