--- a/Source/LJH.Attendance.UI/FrmMainDemo.resx
+++ b/Source/LJH.Attendance.UI/FrmMainDemo.resx
@@ -121,6 +121,94 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="系统ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="系统ToolStripMenuItem.Text" xml:space="preserve">
+    <value>系统</value>
+  </data>
+  <data name="mnu_基本资料.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="mnu_基本资料.Text" xml:space="preserve">
+    <value>基本资料</value>
+  </data>
+  <data name="考勤管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="考勤管理ToolStripMenuItem.Text" xml:space="preserve">
+    <value>考勤管理</value>
+  </data>
+  <data name="安全管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>68, 21</value>
+  </data>
+  <data name="安全管理ToolStripMenuItem.Text" xml:space="preserve">
+    <value>安全管理</value>
+  </data>
+  <data name="mnu_ShiftResultStatistics.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="mnu_ShiftResultStatistics.Text" xml:space="preserve">
+    <value>月考勤统计表</value>
+  </data>
+  <data name="mnu_ResultMonthReport.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="mnu_ResultMonthReport.Text" xml:space="preserve">
+    <value>月考勤明细表</value>
+  </data>
+  <data name="mnu_ResultDayReport.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="mnu_ResultDayReport.Text" xml:space="preserve">
+    <value>日考勤报表</value>
+  </data>
+  <data name="toolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>169, 6</value>
+  </data>
+  <data name="mnu_AttendanceLogReport.Size" type="System.Drawing.Size, System.Drawing">
+    <value>172, 22</value>
+  </data>
+  <data name="mnu_AttendanceLogReport.Text" xml:space="preserve">
+    <value>原始考勤记录查询</value>
+  </data>
+  <data name="报表ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="报表ToolStripMenuItem.Text" xml:space="preserve">
+    <value>报表</value>
+  </data>
+  <data name="帮助ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>44, 21</value>
+  </data>
+  <data name="帮助ToolStripMenuItem.Text" xml:space="preserve">
+    <value>帮助</value>
+  </data>
+  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 0</value>
+  </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>901, 25</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>19</value>
+  </data>
+  <data name="menuStrip1.Text" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
+    <value>menuStrip1</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
   <data name="mnu_Logout.Size" type="System.Drawing.Size, System.Drawing">
     <value>124, 22</value>
   </data>
@@ -132,12 +220,6 @@
   </data>
   <data name="mnu_Exit.Text" xml:space="preserve">
     <value>退出系统</value>
-  </data>
-  <data name="系统ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="系统ToolStripMenuItem.Text" xml:space="preserve">
-    <value>系统</value>
   </data>
   <data name="mnu_Departments.Size" type="System.Drawing.Size, System.Drawing">
     <value>148, 22</value>
@@ -202,7 +284,6 @@
   <data name="toolStripSeparator8.Size" type="System.Drawing.Size, System.Drawing">
     <value>145, 6</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="toolStripSeparator8.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
@@ -212,59 +293,50 @@
   <data name="mnu_Options.Text" xml:space="preserve">
     <value>选项</value>
   </data>
-  <data name="mnu_Options.Visible" type="System.Boolean, mscorlib">
-    <value>False</value>
-  </data>
-  <data name="mnu_基本资料.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
-  </data>
-  <data name="mnu_基本资料.Text" xml:space="preserve">
-    <value>基本资料</value>
-  </data>
   <data name="mnu_AttendanceRules.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_AttendanceRules.Text" xml:space="preserve">
     <value>考勤规则</value>
   </data>
   <data name="mnu_Shifts.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Shifts.Text" xml:space="preserve">
     <value>班次管理</value>
   </data>
   <data name="mnu_ShiftTemplate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_ShiftTemplate.Text" xml:space="preserve">
     <value>排班模板</value>
   </data>
   <data name="mnu_ShiftArrange.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_ShiftArrange.Text" xml:space="preserve">
     <value>人员排班</value>
   </data>
   <data name="toolStripSeparator7.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="mnu_ManualLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_ManualLog.Text" xml:space="preserve">
     <value>补签</value>
   </data>
   <data name="mnu_AttendanceAnalyst.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_AttendanceAnalyst.Text" xml:space="preserve">
     <value>生成考勤结果</value>
   </data>
-  <data name="考勤管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
+  <data name="mnu_ShiftResultMaster.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
   </data>
-  <data name="考勤管理ToolStripMenuItem.Text" xml:space="preserve">
-    <value>考勤管理</value>
+  <data name="mnu_ShiftResultMaster.Text" xml:space="preserve">
+    <value>考勤结果明细</value>
   </data>
   <data name="mnu_Operator.Size" type="System.Drawing.Size, System.Drawing">
     <value>136, 22</value>
@@ -287,51 +359,6 @@
   <data name="mnu_ChangePWD.Text" xml:space="preserve">
     <value>修改密码</value>
   </data>
-  <data name="安全管理ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>68, 21</value>
-  </data>
-  <data name="安全管理ToolStripMenuItem.Text" xml:space="preserve">
-    <value>安全管理</value>
-  </data>
-  <data name="mnu_ShiftResultStatistics.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="mnu_ShiftResultStatistics.Text" xml:space="preserve">
-    <value>月考勤统计表</value>
-  </data>
-  <data name="mnu_ShiftResultStatistics2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="mnu_ShiftResultStatistics2.Text" xml:space="preserve">
-    <value>月考勤明细表</value>
-  </data>
-  <data name="mnu_ResultDetail.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="mnu_ResultDetail.Text" xml:space="preserve">
-    <value>日考勤统计</value>
-  </data>
-  <data name="mnu_ShiftResultMaster.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="mnu_ShiftResultMaster.Text" xml:space="preserve">
-    <value>考勤结果明细</value>
-  </data>
-  <data name="toolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>169, 6</value>
-  </data>
-  <data name="mnu_AttendanceLogReport.Size" type="System.Drawing.Size, System.Drawing">
-    <value>172, 22</value>
-  </data>
-  <data name="mnu_AttendanceLogReport.Text" xml:space="preserve">
-    <value>原始考勤记录查询</value>
-  </data>
-  <data name="报表ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="报表ToolStripMenuItem.Text" xml:space="preserve">
-    <value>报表</value>
-  </data>
   <data name="用户手册ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>124, 22</value>
   </data>
@@ -347,39 +374,33 @@
   <data name="mnu_Aboat.Text" xml:space="preserve">
     <value>关于...</value>
   </data>
-  <data name="帮助ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>44, 21</value>
-  </data>
-  <data name="帮助ToolStripMenuItem.Text" xml:space="preserve">
-    <value>帮助</value>
-  </data>
-  <data name="menuStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 0</value>
-  </data>
-  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>901, 25</value>
-  </data>
-  <data name="menuStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>19</value>
-  </data>
-  <data name="menuStrip1.Text" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Name" xml:space="preserve">
-    <value>menuStrip1</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;menuStrip1.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
   </metadata>
+  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 25</value>
+  </data>
+  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>901, 64</value>
+  </data>
+  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="toolStrip1.Text" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
+    <value>toolStrip1</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
+    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.1110, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
   <data name="btnDepartment.ImageTransparentColor" type="System.Drawing.Color, System.Drawing">
     <value>Magenta</value>
   </data>
@@ -555,42 +576,9 @@
   <data name="btnAttendanceLog.TextImageRelation" type="System.Windows.Forms.TextImageRelation, System.Windows.Forms">
     <value>ImageAboveText</value>
   </data>
-  <data name="toolStrip1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 25</value>
-  </data>
-  <data name="toolStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>901, 64</value>
-  </data>
-  <data name="toolStrip1.TabIndex" type="System.Int32, mscorlib">
-    <value>20</value>
-  </data>
-  <data name="toolStrip1.Text" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Name" xml:space="preserve">
-    <value>toolStrip1</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
-    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.1110, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;toolStrip1.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>247, 17</value>
   </metadata>
-  <data name="lblOperator.Font" type="System.Drawing.Font, System.Drawing">
-    <value>宋体, 9pt, style=Bold</value>
-  </data>
-  <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
-    <value>886, 17</value>
-  </data>
-  <data name="lblOperator.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleLeft</value>
-  </data>
   <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 333</value>
   </data>
@@ -614,6 +602,15 @@
   </data>
   <data name="&gt;&gt;statusStrip1.ZOrder" xml:space="preserve">
     <value>1</value>
+  </data>
+  <data name="lblOperator.Font" type="System.Drawing.Font, System.Drawing">
+    <value>宋体, 9pt, style=Bold</value>
+  </data>
+  <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
+    <value>886, 17</value>
+  </data>
+  <data name="lblOperator.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleLeft</value>
   </data>
   <data name="ucFormViewMain.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
@@ -639,6 +636,9 @@
   <data name="&gt;&gt;ucFormViewMain.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <metadata name="tmrAutoGenerateResult.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>365, 17</value>
+  </metadata>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -3253,6 +3253,12 @@
   <data name="&gt;&gt;mnu_AttendanceAnalyst.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;mnu_ShiftResultMaster.Name" xml:space="preserve">
+    <value>mnu_ShiftResultMaster</value>
+  </data>
+  <data name="&gt;&gt;mnu_ShiftResultMaster.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;安全管理ToolStripMenuItem.Name" xml:space="preserve">
     <value>安全管理ToolStripMenuItem</value>
   </data>
@@ -3295,16 +3301,16 @@
   <data name="&gt;&gt;mnu_ShiftResultStatistics.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mnu_ShiftResultStatistics2.Name" xml:space="preserve">
-    <value>mnu_ShiftResultStatistics2</value>
+  <data name="&gt;&gt;mnu_ResultMonthReport.Name" xml:space="preserve">
+    <value>mnu_ResultMonthReport</value>
   </data>
-  <data name="&gt;&gt;mnu_ShiftResultStatistics2.Type" xml:space="preserve">
+  <data name="&gt;&gt;mnu_ResultMonthReport.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mnu_ResultDetail.Name" xml:space="preserve">
-    <value>mnu_ResultDetail</value>
+  <data name="&gt;&gt;mnu_ResultDayReport.Name" xml:space="preserve">
+    <value>mnu_ResultDayReport</value>
   </data>
-  <data name="&gt;&gt;mnu_ResultDetail.Type" xml:space="preserve">
+  <data name="&gt;&gt;mnu_ResultDayReport.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;toolStripSeparator3.Name" xml:space="preserve">
@@ -3439,11 +3445,11 @@
   <data name="&gt;&gt;lblOperator.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;mnu_ShiftResultMaster.Name" xml:space="preserve">
-    <value>mnu_ShiftResultMaster</value>
+  <data name="&gt;&gt;tmrAutoGenerateResult.Name" xml:space="preserve">
+    <value>tmrAutoGenerateResult</value>
   </data>
-  <data name="&gt;&gt;mnu_ShiftResultMaster.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;tmrAutoGenerateResult.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Timer, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FrmMainDemo</value>
